--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
 
 <section class="content-33">
     <div class="container">
-        <p class="lead">Share and trade stuff with friends. Together we own it.
+        <p class="lead">Jipio is a “Dropbox” for stuff, time and knowledge and helps people tap into each other resources without having to do with strangers.
 </section>
 
 <section class="content-23 v-center bg-clouds">
@@ -29,12 +29,12 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
     <div>
 
         <div class="container">
-            <h3>Jipio is a mobile marktplace to share and trade with friends</h3>
+            <h3>Jipio is a social marketplace, seeking to change the way people use stuff together. </h3>
 
             <div class="row v-center">
                 <div class="col-sm-3">
                     <div>
-                        Trade and share with people you trust. Jipio lets you set the privacy of your item, choose to share with friends or with friends of friends.
+                        This marketplace lets users tap into each others resources without having to do with strangers. We make it easy to snap, tag and add items and search for the things you need.
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -49,10 +49,10 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
                 </div>
                 <div class="col-sm-3">
                     <div class="col-sm-offset-2">
-                        <h6>Responsive Layout</h6>
-                        Of course we haven’t forgotten about the responsive layout. Full mobile support.
-                        <h6>Retina Ready</h6>
-                        Startup Framework works fine on devices supporting Retina Display. Feel the clarity!
+                        <h6></h6>
+                        Let’s say you’re going away for the weekend and need a tent, you can then go to Jipio and search for it. If you see a tent you like you can request the item and depending on the owner you can either borrow the item or even trade it.
+                        <h6>Facebook</h6>
+                        We connect with your social networks and use Facebook. 
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
       background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>Do more with together</h1>
+                <h1>Help others, share what you have</h1>
             </div>
         </div>
     </div>
@@ -80,7 +80,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
         <div class="container">
             <img src="{{site.assets}}images/jipio_search.png" alt="">
 
-            <h3>Search and find what you need</h3>
+            <h3>What do you need?</h3>
 
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3">
@@ -112,18 +112,18 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3>Documentation</h3>
-                <p>Documentation is really important for a developer. Right from it you get to know the product.
-                    We tried to describe all the components and provide the set-up instructions.
+                <h3>Apps</h3>
+                <p>Yes, Jipio is available in the app stores of Google and Apple or just go to Jipio with your browser and login. 
+                    
                 </p>
                 <div class="row">
                     <div class="col-sm-6 info">
-                        <h6>User Guide</h6>
-                        You’ll get a description of each component and learn how to connect and use them.
+                        <h6>Transaction</h6>
+                        Jipio is the platform for friendly transactions. This button is what its all about. Request someting from a friend and keep track of the status.
                     </div>
                     <div class="col-sm-6 info">
-                        <h6>Video Tutorials</h6>
-                        Video tutorials show you how to make a web site for your startup from design to code.
+                        <h6>Scheduling</h6>
+                        Jipio lets you easy schedule transactions in time. So you never lent something twice and always know who has what. 
                     </div>
                 </div>
             </div>
@@ -164,18 +164,17 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
     <div class="container">
         <div class="row">
             <div class="col-sm-5 col-sm-offset-5">
-                <h2>Features</h2>
-                <p class="lead">The most important parts of the Startup Framework are Samples and the UI Kit that
-                    includes a set of different components. The samples consist of a set of 25 pages. </p>
+                <h2>Vision</h2>
+                <p class="lead">Together we waste too much. We waste money, resources and time by not putting to use what we already own. Our closest, trunks and garages are the largest warehouses in the world and harbor an enormous untapped potential.</p>
                 <a href="#" class="btn btn-inverse">Buy Now</a>
                 <div class="row columns">
                     <div class="col-sm-5">
-                        <h3>Smart Layers</h3>
-                        <p>Just put the image with your App screen inside Smart Layer and get the photo.</p>
+                        <h3>Access thrumps ownership</h3>
+                        <p>We believe a new era is upon us with people sharing time, skills and things. An era where access trumps ownership and consuming directly from people we trust is more affordable, less wasteful and most importantly more social.</p>
                     </div>
                     <div class="col-sm-5 col-sm-offset-2">
-                        <h3>Video Tutorials</h3>
-                        <p>Video tutorials show you how to make a site from design to code. </p>
+                        <h3>The Sharing Economy</h3>
+                        <p>The sharing economy is helping to pay the bills, work flexible hours, meet new people and spend more time with our families. It’s an economy that brings people together around a common good. We think it’s how the 21st century should work so we’re building the platform to make it happen.</p>
                     </div>
                 </div>
             </div>
@@ -213,7 +212,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
 </section>
 <section class="content-33">
     <div class="container">
-        <p class="lead">Documentation is really important for a developer. Right from it you get to know the product. We tried to describe all the components and provide the set-up instructions.</p>
+        <p class="lead">We can revolutionize the way we use stuff together. Together we own it.</p>
     </div>
 </section>
 
