--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
     <div>
 
         <div class="container">
-            <h3>Jipio is a social marketplace, seeking to change the way people use stuff together. </h3>
+            <h3>Jipio is a social marketplace seeking to change the way people use stuff together. </h3>
 
             <div class="row v-center">
                 <div class="col-sm-3">
                     <div>
-                        This marketplace lets users tap into each others resources without having to do with strangers. We make it easy to snap, tag and add items and search for the things you need.
+                        Jipio is a marketplace that lets users tap into each others resources without having to do with strangers. We make it easy to snap, tag and add items and search for the things you need.
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -49,10 +49,10 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
                 </div>
                 <div class="col-sm-3">
                     <div class="col-sm-offset-2">
-                        <h6></h6>
-                        Let’s say you’re going away for the weekend and need a tent, you can then go to Jipio and search for it. If you see a tent you like you can request the item and depending on the owner you can either borrow the item or even trade it.
-                        <h6>Facebook</h6>
-                        We connect with your social networks and use Facebook. 
+                        <h6>Your network</h6>
+                        Jipio is a platform for friendly transactions. We believe your friends are the first ones to turn to when you need to borrow something. 
+                        <h6>Your Facebook Friends</h6>
+                        Since Facebook is currently the largest social network we've setup Jipio so that is works with Facebook registration only. We  do this to authenticate our users and provide an open and intimate experience. Your Facebook friends will be automatically added to your list as soon as they sign up. 
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
       background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>Help others, share what you have</h1>
+                <h1>Help others, share what you own</h1>
             </div>
         </div>
     </div>
@@ -80,13 +80,13 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
         <div class="container">
             <img src="{{site.assets}}images/jipio_search.png" alt="">
 
-            <h3>What do you need?</h3>
+            <h3>Looking for something?</h3>
 
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3">
                     <p>Search on keyword, category or have a look at what your friends have to offer. Cannot find what you're looking for, send out a request.
                     </p>
-                    <a class="btn btn-large btn-clear" href="#">TRY JIPIO NOW!</a>
+                    <a class="btn btn-large btn-clear" href="#">Try Jipio now!</a>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
       background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>Available everywhere</h1>
+                <h1>We are everywhere</h1>
             </div>
         </div>
     </div>
@@ -112,18 +112,18 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3>Apps</h3>
-                <p>Yes, Jipio is available in the app stores of Google and Apple or just go to Jipio with your browser and login. 
+                <h3>Share what you own</h3>
+                <p>With Jipio you can help your friends by sharing stuff you own. Easily add items and set a status.  
                     
                 </p>
                 <div class="row">
                     <div class="col-sm-6 info">
-                        <h6>Transaction</h6>
-                        Jipio is the platform for friendly transactions. This button is what its all about. Request someting from a friend and keep track of the status.
+                        <h6>Borrowed</h6>
+                        Let’s say you’re going away for the weekend and need a tent, you can then go to Jipio and search for it. If you see a tent you like you can request the item and depending on the owner you can either borrow the item or even trade it.
                     </div>
                     <div class="col-sm-6 info">
-                        <h6>Scheduling</h6>
-                        Jipio lets you easy schedule transactions in time. So you never lent something twice and always know who has what. 
+                        <h6>Lent out</h6>
+                        Jipio let’s you have a private conversation and schedule a pickup and dropoff time. The platform automatically reminds you to return an item. Items you’ve lend out are listed so you always know who has borrowed what and can ask to return it anytime. As an owner you can choose how to share the item and if you want something in return.  
                     </div>
                 </div>
             </div>
@@ -165,8 +165,8 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
         <div class="row">
             <div class="col-sm-5 col-sm-offset-5">
                 <h2>Vision</h2>
-                <p class="lead">Together we waste too much. We waste money, resources and time by not putting to use what we already own. Our closest, trunks and garages are the largest warehouses in the world and harbor an enormous untapped potential.</p>
-                <a href="#" class="btn btn-inverse">Buy Now</a>
+                <p class="lead">Together we waste too much. We waste money, resources and time by not putting to use what we already own. </p>
+                <!--<a href="#" class="btn btn-inverse">Try it now.</a>-->
                 <div class="row columns">
                     <div class="col-sm-5">
                         <h3>Access thrumps ownership</h3>
@@ -186,33 +186,32 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
     <div class="container">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h3>The Second Sneak-Peek of Startup Framework</h3>
-                <p class="lead">We’ve created the product that will help your
-                    startup to look even better.</p>
+                <h3>A platform for friendly transsctions</h3>
+                <p class="lead">We’ve created a platform for you and your friends to tap into each others without having to do with strangers. </p>
             </div>
         </div>
         <div class="row features">
             <div class="col-sm-3">
                 <img src="{{site.assets}}images/itunesartwork_2x.png" alt="" width="100" height="100">
-                <h6>Based on Bootstrap</h6>
-                HTML layout is based on one of the common frameworks.
+                <h6>Apps</h6>
+                Yes, you can use Jipio everywhere, download the apps from the appstores or just use your browser to login.
             </div>
             <div class="col-sm-4 col-sm-offset-1">
                 <img src="{{site.assets}}images/action_2x.png" alt="" width="100" height="100">
-                <h6>HTML 5, Less, CSS 3</h6>
-                We used checked-out technologies to give the best results.
+                <h6>Transactions</h6>
+                Lent out stuff, borrow, give away, go, enjoy, together we have more than you could ever imagine. 
             </div>
             <div class="col-sm-3 col-sm-offset-1">
                 <img src="{{site.assets}}images/Calendar@2x.png" alt="" width="100" height="100">
-                <h6>Block Mode</h6>
-                You can easily combine any blocks in a variety of design projects.
+                <h6>Schedule and track</h6>
+                Schedule and track your transactions and never forgot who you lend what. 
             </div>
         </div>
     </div>
 </section>
 <section class="content-33">
     <div class="container">
-        <p class="lead">We can revolutionize the way we use stuff together. Together we own it.</p>
+        <p class="lead">We can revolutionize the way we use stuff together. We own it.</p>
     </div>
 </section>
 
