--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
                         <div class="screen-wrapper">
                             <div class="screen">
                                 <img src="{{site.assets}}images/jipio_login.png" alt="">
-                                <!--<img src="{{site.assets}}images/jipio_login.png" alt="">-->
+                                <img src="{{site.assets}}images/jipio_login.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -156,7 +156,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <div></div>
+                    <div style="background-image: url({{site.assets}}images/jip4.jpg);"></div>
                 </div>
             </div>
         </div>
