Align picture, fixes #12

--- a/index.html
+++ b/index.html
@@ -38,21 +38,16 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="col-sm-offset-1">
-                        <div class="screen-wrapper">
-                            <div class="screen">
-                                <img src="{{site.assets}}images/jipio_login.png" alt="">
-                                <img src="{{site.assets}}images/jipio_login.png" alt="">
-                            </div>
-                        </div>
+                    <div class="col-sm-offset-1 text-center">
+                        <img src="{{site.assets}}images/jipio_login.png" alt="">
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="col-sm-offset-2">
                         <h6>Your network</h6>
-                        Jipio is a platform for friendly transactions. We believe your friends are the first ones to turn to when you need to borrow something. 
+                        Jipio is a platform for friendly transactions. We believe your friends are the first ones to turn to when you need to borrow something.
                         <h6>Your Facebook Friends</h6>
-                        Since Facebook is currently the largest social network we've setup Jipio so that is works with Facebook registration only. We  do this to authenticate our users and provide an open and intimate experience. Your Facebook friends will be automatically added to your list as soon as they sign up. 
+                        Since Facebook is currently the largest social network we've setup Jipio so that is works with Facebook registration only. We  do this to authenticate our users and provide an open and intimate experience. Your Facebook friends will be automatically added to your list as soon as they sign up.
                     </div>
                 </div>
             </div>
@@ -113,8 +108,8 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
         <div class="row">
             <div class="col-sm-6">
                 <h3>Share what you own</h3>
-                <p>With Jipio you can help your friends by sharing stuff you own. Easily add items and set a status.  
-                    
+                <p>With Jipio you can help your friends by sharing stuff you own. Easily add items and set a status.
+
                 </p>
                 <div class="row">
                     <div class="col-sm-6 info">
@@ -123,7 +118,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
                     </div>
                     <div class="col-sm-6 info">
                         <h6>Lent out</h6>
-                        Jipio let’s you have a private conversation and schedule a pickup and dropoff time. The platform automatically reminds you to return an item. Items you’ve lend out are listed so you always know who has borrowed what and can ask to return it anytime. As an owner you can choose how to share the item and if you want something in return.  
+                        Jipio let’s you have a private conversation and schedule a pickup and dropoff time. The platform automatically reminds you to return an item. Items you’ve lend out are listed so you always know who has borrowed what and can ask to return it anytime. As an owner you can choose how to share the item and if you want something in return.
                     </div>
                 </div>
             </div>
@@ -199,12 +194,12 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
             <div class="col-sm-4 col-sm-offset-1">
                 <img src="{{site.assets}}images/action_2x.png" alt="" width="100" height="100">
                 <h6>Transactions</h6>
-                Lent out stuff, borrow, give away, go, enjoy, together we have more than you could ever imagine. 
+                Lent out stuff, borrow, give away, go, enjoy, together we have more than you could ever imagine.
             </div>
             <div class="col-sm-3 col-sm-offset-1">
                 <img src="{{site.assets}}images/Calendar@2x.png" alt="" width="100" height="100">
                 <h6>Schedule and track</h6>
-                Schedule and track your transactions and never forgot who you lend what. 
+                Schedule and track your transactions and never forgot who you lend what.
             </div>
         </div>
     </div>
