--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
       background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>Share and trade with friends</h1>
+                <h1>Share your stuff withh friends</h1>
             </div>
         </div>
     </div>
@@ -29,12 +29,12 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
     <div>
 
         <div class="container">
-            <h3>Jipio is a social marketplace seeking to change the way people use stuff together. </h3>
+            <h3>Use Jipio to share and trade with friends.</h3>
 
             <div class="row v-center">
                 <div class="col-sm-3">
                     <div>
-                        Jipio is a marketplace that lets users tap into each others resources without having to do with strangers. We make it easy to snap, tag and add items and search for the things you need.
+                        Jipio is a marketplace that lets users tap into each others resources without having to do with strangers. Share what you own and help others. Snap, tag and add items. Choose who you want to share with and how (lent it out, give it away, rent it, trade it).
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -44,10 +44,10 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
                 </div>
                 <div class="col-sm-3">
                     <div class="col-sm-offset-2">
-                        <h6>Your network</h6>
-                        Jipio is a platform for friendly transactions. We believe your friends are the first ones to turn to when you need to borrow something.
-                        <h6>Your Facebook Friends</h6>
-                        Since Facebook is currently the largest social network we've setup Jipio so that is works with Facebook registration only. We  do this to authenticate our users and provide an open and intimate experience. Your Facebook friends will be automatically added to your list as soon as they sign up.
+                        <h6>Your friends</h6>
+                        Jipio is a platform for friendly transactions. We believe your friends are the first ones to turn to when you need something. 
+                        <h6>Facebook</h6>
+                        Since Facebook is currently the largest social network we've setup Jipio so that is works with Facebook registration only. We do this to authenticate our users and provide an open and intimate experience. Your Facebook friends will be automatically added to your list as soon as they sign up.
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
       background-size: cover;">
         <div class="container">
             <div class="hero-unit hero-unit-bordered">
-                <h1>Help others, share what you own</h1>
+                <a name="share"><h1>Share what you own</h1></a>
             </div>
         </div>
     </div>
@@ -79,9 +79,9 @@ tags: [Jipio, sharing, economy, collaborative consumption, use, together, share,
 
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3">
-                    <p>Search on keyword, category or have a look at what your friends have to offer. Cannot find what you're looking for, send out a request.
+                    <p>Search on keyword, category or have a look at what your friends have available. If you cannot find what you're looking for you can post a request.
                     </p>
-                    <a class="btn btn-large btn-clear" href="#">Try Jipio now!</a>
+                    <a class="btn btn-large btn-clear" href="#">Try Jipio!</a>
                 </div>
             </div>
         </div>
